--- a/AdressListWithSwift3/Info.plist
+++ b/AdressListWithSwift3/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>ytPhotoLibrary</string>
+	<key>NSCameraUsageDescription</key>
+	<string>ytCamera</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
